plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.

	maven { url = 'https://jitpack.io' }
	maven { url = 'https://maven.terraformersmc.com/releases/' }
	maven {
    	name = "meteorRepositorySnapshots"
    	url = "https://maven.meteordev.org/snapshots/"
		// https://maven.meteordev.org/#/snapshots/meteordevelopment
	}
	maven {
    	name = 'babbaj-repo'
    	url = 'https://babbaj.github.io/maven/'
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
	//Mods
	modImplementation "com.github.sakura-ryoko:malilib:${project.malilib_version}" // malilib
	modCompileOnly "com.terraformersmc:modmenu:${project.mod_menu_version}" // modmenu
	//Baritone
	modImplementation "meteordevelopment:baritone:${project.minecraft_version}-SNAPSHOT"
	modRuntimeOnly "dev.babbaj:nether-pathfinder:${project.nether_pathfinder_version}" // https://github.com/babbaj/maven/tree/master/dev/babbaj/nether-pathfinder
}

// For a mod named 'mymod.jar' in the 'libs' folder     
// 'local' is a common arbitrary group name for flatDir dependencies     
// 'mymod' is the artifact name, matching the JAR filename     
// '0' is a placeholder version, or you can omit it if no version     modImplementation("local:mymod:0") {         
// This is crucial for Fabric! Applying the correct mappings         
// The artifact path needs to be specified for remap to work correctly         artifact {             name = "mymod"             extension = "jar"             type = "jar"         }     }

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}